# Mimzy

./: .clang-format  CMakeLists.txt
cmake/: libraries.cmake
examples/: CMakeLists.txt
examples/example/: example.cpp
examples/tools/: tools.cpp  tools.h
mimzy/: CMakeLists.txt
mimzy/accelerators/: bvh.cpp  bvh.h  kdtree.cpp  kdtree.h  octree.cpp  octree.h
mimzy/common/: mimzy.h
mimzy/core/: stack.h
mimzy/mathematics/: bounding_box.cpp  bounding_box.h  mathematics_types.h  ray.h  triangle.cpp  triangle.h
